<resources>
    <string name="app_name">MyAutoNote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_folder">New Folder</string>
    <string name="new_note">New Note</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="search_hint">Search my notes</string>
    <string name="no_results">Nothing found</string>
    <string name="pref_key_intro_done">intro_done</string>
    <string name="welcome">MyAutoNote</string>
    <string name="username">Please enter your name</string>
    <string name="description_intro">Easy yet powerful note taking</string>
    <string name="pref_key_username">username</string>
    <string name="invalid_username">Please enter a valid name</string>
    <string name="logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My notes</string>
    <string name="trash">Trash</string>
    <string name="no_items_in_trash">No items in trash</string>
    <string name="about">About</string>
    <string name="photo_display">Photo display</string>
    <string name="photo_transition_name">photo_transition</string>
    <string name="latest_img_uri">latest_img_uri</string>
</resources>
