<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_gravity="bottom">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_rename"
        android:text="@string/rename"
        style="@style/BottomPopupOptionItem"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_move_to_folder"
        android:text="@string/move"
        style="@style/BottomPopupOptionItem"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_delete_black_24dp"
        android:text="@string/delete"
        style="@style/BottomPopupOptionItem"/>
</LinearLayout>